# anime_rpc

./: .gitattributes  .gitignore  README.md  anime_rpc.spec  build.sh  dev-requirements.txt  example.config  example.rpc  example.rpc.config  flake.nix  hook-anime_rpc.monkey_patch.py  launcher.py  pyproject.toml  requirements.txt  service_template_generator.py
.github/workflows/: build-ui.yml  build.yml  checks.yml  lint.yml  python-tests.yml  release-ui.yml  tests.yml  typecheck.yml
anime_rpc/: __init__.py  __main__.py  asyncio_helper.py  cache.py  cli.py  config.py  file_watcher.py  formatting.py  main.py  matcher.py  metadata_provider.py  metadata_providers.py  monkey_patch.py  mpc.py  presence.py  scraper.py  services.py  social_sdk.py  states.py  timer.py  ux.py  webserver.py
anime_rpc/pollers/: __init__.py  base_poller.py  mpc_poller.py  mpv_poller.py
assets/: README.md
extension/: content.js  manifest.json
extension/action/: popup.css  popup.html  popup.js
extension/sites/: bilibili.js
nix/: hm-module.nix  package.nix  ui.nix
scripts/: release.sh
tests/: test_matcher.py
ui/: Cargo.toml  build.rs
ui/src/: animations.rs  api.rs  app.rs  components.rs  constants.rs  curves.rs  history.rs  main.rs  sse.rs  styles.rs  types.rs  utils.rs
ui/src/views/: config.rs  search.rs
user_scripts/: core.js
user_scripts/services/: youtube.js
userscripts/: core.user.js
userscripts/services/: bilibili.user.js  youtube.user.js
userscripts/services/aniwatch/: aniwatch.user.js  aniwatchiframe.user.js  iframehelper.user.js
