[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anime_rpc_ui"
path = "src/main.rs"

[dependencies]
gtk = "0.18.2"
iced = { version = "0.14.0", features = ["canvas", "image", "tokio", "wgpu"] }
image = "0.25.10"
lru = "0.16.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tray-icon = "0.22.0"
