[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anime_rpc_ui"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.32"
iced = { version = "0.14.0", features = [
  "advanced",
  "canvas",
  "image",
  "svg",
  "tokio",
  "wgpu"
] }
image = "0.25.10"
lru = "0.16.3"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
  "stream"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.10", features = ["open_uri"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
